# fsw-linux-homework-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Client.hpp  ClientControl.hpp  ClientError.hpp  Result.hpp  ResultType.hpp
src/: Client.cpp  ClientControl.cpp  client1.cpp  client2.cpp
